boreal/tests/assets/invalid_files/parsing/str_to_int2.yar
// [error: error converting to integer: number too large to fit in target type]
rule a {
    strings:
        $a = /a{10000000000}/
    condition:
        $a
}
